--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,7 @@ bg-yellow-300 flex flex-col pl-5 pr-2 pt-5">
             <h2 class="text-2xl text-white pb-2">Sidebar</h2>
         </header>
 
-        <ul class="overflow-y-auto pt3 pr-3 w-full mt-10
-        ">
+        <ul class="overflow-y-auto pt3 pr-3 w-full mt-10">
             <li class="leading-[60px] cursor-pointer duration-1000 hover:bg-slate-500">Dashboard</li>
 
             <li class="leading-[60px] cursor-pointer duration-1000 hover:bg-slate-500 ">
