--- a/src/index.html
+++ b/src/index.html
@@ -11,36 +11,59 @@
 <body>
 
     <nav class="fixed top-0 left-0
-w-64 h-full 
-bg-yellow-300 flex flex-col pl-5 pr-2 pt-5">
+                w-64 h-full 
+                bg-yellow-300 flex flex-col pl-5 pr-2 pt-5">
 
         <header>
             <h2 class="text-2xl text-white pb-2">Sidebar</h2>
         </header>
 
-        <ul class="overflow-y-auto pt3 pr-3 w-full mt-10">
-            <li class="leading-[60px] cursor-pointer duration-1000 hover:bg-slate-500">Dashboard</li>
+        <ul class="myMenuUl overflow-y-auto pt3 pr-3 w-full mt-10">
+            
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Dashboard</li>
 
-            <li class="leading-[60px] cursor-pointer duration-1000 hover:bg-slate-500 ">
-                It Has Sub
-                <ul class="feat-show">
-                    <li class="none ml-6 cursor-pointer duration-1000 hover:bg-red-600"><a href="#">Pages</a></li>
-                    <li class="none ml-6 cursor-pointer duration-1000 hover:bg-red-600"><a href="#">Elements</a></li>
+
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500 ">
+                This Has Sub
+                <ul class="hidden">
+                    <li class="mySubMenu pl-2 none ml-6 cursor-pointer duration-1000 hover:bg-red-600">SubMenu</li>
+                    <li class="mySubMenu pl-2 none ml-6 cursor-pointer duration-1000 hover:bg-red-600">SubMenu2</li>
                 </ul>
 
             </li>
 
-            <li class="leading-[60px] cursor-pointer duration-1000 hover:bg-slate-500">Services </li>
-            <li class="leading-[60px] cursor-pointer duration-1000 hover:bg-slate-500">Portfolio</li>
-            <li class="leading-[60px] cursor-pointer duration-1000 hover:bg-slate-500">Overview</li>
-            <li class="leading-[60px] cursor-pointer duration-1000 hover:bg-slate-500">Shortcuts</li>
-            <li class="leading-[60px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
-        </ul>
+
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Services </li>
 
 
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Portfolio
+                <ul class="hidden">
+                    <li class="mySubMenu pl-2 none ml-6 cursor-pointer duration-1000 hover:bg-red-600">SubMenu3</li>
+                    <li class="mySubMenu pl-2 none ml-6 cursor-pointer duration-1000 hover:bg-red-600">SubMenu4</li>
+                </ul>
+            </li>
 
+
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Overview</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Shortcuts</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
+            <li class=" leading-[40px] cursor-pointer duration-1000 hover:bg-slate-500">Feedback</li>
+        </ul> 
+        
         <footer class="text-xl text-white pt-4 pb-10">
-            <h2>I'm footer</h2>
+        <h2>I'm footer</h2>
         </footer>
 
 
